@@ -2360,6 +2360,7 @@ Chong Wuk Pak <chong dot pak at lmco dot com>
 Michael Frommberger <michael dot frommberger at gmx dot net>
 Andrey Karpov <karpov at viva64 dot com>
 Dmytro Ovdiienko <dmitriy dot ovdienko at gmail.com>
+Andrea Sormanni <andrea dot sormanni at gmail dot com> 
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
